--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -104,7 +104,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #007bff;
+  color: #B35408;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
