Added scroll to top arrow

--- a/css/style.css
+++ b/css/style.css
@@ -2672,3 +2672,60 @@ figure figcaption {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+
+.arrowScrollUp {
+  position: relative;
+  visibility: hidden;
+}
+.arrow {
+  width: 50px;
+  height: 50px;
+  background-color: #b35408;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+  text-align: center;
+}
+.arrowImg {
+  width: 20px;
+  height: 30px;
+  margin-top: 10px;
+}
+.showArrow {
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+.hideArrow {
+  animation-name: fadeOut;
+  animation-duration: 0.2s;
+  animation-fill-mode: forwards;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.o-que-fazemos {
+  margin-top: 5vh;
+}
