--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,6 @@
 /* Base */
 html {
   overflow-x: hidden;
-  scrollbar-width: none !important;
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
 
 body {
@@ -200,6 +195,13 @@ body:after {
 .site-footer .footer-heading {
   font-size: 16px;
   color: #fff;
+}
+.footerContent {
+  text-align: center;
+}
+.author {
+  color: #999999;
+  display: inline;
 }
 
 .bg-text-line {
@@ -2726,6 +2728,6 @@ figure figcaption {
     visibility: hidden;
   }
 }
-.o-que-fazemos {
+.containerRow {
   margin-top: 5vh;
 }
