Page structure done

--- a/css/style.css
+++ b/css/style.css
@@ -163,12 +163,12 @@ body:after {
 }
 
 .site-footer {
-  padding: 4em 0;
+  padding: 2em 0;
   background: #333333;
 }
 @media (min-width: 768px) {
   .site-footer {
-    padding: 8em 0;
+    padding: 4em 0;
   }
 }
 .site-footer .border-top {
@@ -2739,4 +2739,7 @@ figure figcaption {
 }
 .saberMainButton:hover {
   color: black !important;
+}
+.map {
+  width: 100%;
 }
