Logo and colors changed

--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -34,7 +34,7 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    #B35408 !default;
+$blue:    #DC3B21 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
