--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -104,7 +104,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #B35408;
+  color: #DC3B21;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
