--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,8 @@ body:after {
   box-shadow: none !important;
 }
 .btn.btn-primary {
-  background: #b35408;
-  border-color: #b35408;
+  background: #DC3B21;
+  border-color: #DC3B21;
   color: #fff;
 }
 .btn.btn-primary:hover {
@@ -129,7 +129,7 @@ body:after {
 }
 .form-control:active,
 .form-control:focus {
-  border-color: #b35408;
+  border-color: #DC3B21;
 }
 .form-control:hover,
 .form-control:active,
@@ -341,7 +341,7 @@ body:after {
   color: #71bc42;
 }
 .ul-check.primary li:before {
-  color: #b35408;
+  color: #DC3B21;
 }
 .ul-check li.remove {
   text-decoration: line-through;
@@ -391,7 +391,7 @@ body:after {
   margin-bottom: 0;
 }
 .site-navbar .site-navigation .site-menu .active {
-  color: #b35408;
+  color: #DC3B21;
   display: inline-block;
   padding: 5px 20px;
 }
@@ -409,7 +409,7 @@ body:after {
   text-decoration: none !important;
 }
 .site-navbar .site-navigation .site-menu > li > a:hover {
-  color: #b35408;
+  color: #DC3B21;
 }
 .site-navbar .site-navigation .site-menu .has-children {
   position: relative;
@@ -435,7 +435,7 @@ body:after {
   top: 100%;
   position: absolute;
   text-align: left;
-  border-top: 2px solid #b35408;
+  border-top: 2px solid #DC3B21;
   -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
   padding: 0px 0;
@@ -482,7 +482,7 @@ body:after {
   color: #000;
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown .active {
-  color: #b35408 !important;
+  color: #DC3B21 !important;
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
   list-style: none;
@@ -534,7 +534,7 @@ body:after {
 .site-navbar .site-navigation .site-menu .has-children:hover > a,
 .site-navbar .site-navigation .site-menu .has-children:focus > a,
 .site-navbar .site-navigation .site-menu .has-children:active > a {
-  color: #b35408;
+  color: #DC3B21;
 }
 .site-navbar .site-navigation .site-menu .has-children:hover,
 .site-navbar .site-navigation .site-menu .has-children:focus,
@@ -631,14 +631,14 @@ body:after {
   color: #212529;
 }
 .site-mobile-menu .site-nav-wrap a:hover {
-  color: #b35408;
+  color: #DC3B21;
 }
 .site-mobile-menu .site-nav-wrap li {
   position: relative;
   display: block;
 }
 .site-mobile-menu .site-nav-wrap li .active {
-  color: #b35408;
+  color: #DC3B21;
 }
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
   position: absolute;
@@ -756,14 +756,14 @@ body:after {
   color: #000;
 }
 .sticky-wrapper.is-sticky .site-navbar .site-logo a {
-  color: #b35408;
+  color: #DC3B21;
 }
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a {
   color: #000 !important;
 }
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover,
 .sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active {
-  color: #b35408 !important;
+  color: #DC3B21 !important;
 }
 .sticky-wrapper .shrink {
   padding-top: 10px !important;
@@ -1018,7 +1018,7 @@ body:after {
 }
 .site-block-tab .nav-item > a:hover,
 .site-block-tab .nav-item > a.active {
-  border-bottom: 2px solid #b35408;
+  border-bottom: 2px solid #DC3B21;
   color: #000;
 }
 
@@ -1139,7 +1139,7 @@ body:after {
   background: #dee2e6;
 }
 .slide-one-item .owl-dots .owl-dot.active span {
-  background: #b35408;
+  background: #DC3B21;
 }
 
 .block-12 {
@@ -1239,7 +1239,7 @@ body:after {
   width: 80px;
   height: 4px;
   margin-top: -4px;
-  background: #b35408;
+  background: #DC3B21;
   top: 0;
 }
 .block-12 .text .text-inner .heading {
@@ -1265,7 +1265,7 @@ body:after {
   display: block;
   border-radius: 50%;
   opacity: 1;
-  color: #b35408 !important;
+  color: #DC3B21 !important;
 }
 .block-16 figure .play-button:hover {
   opacity: 1;
@@ -1311,7 +1311,7 @@ body:after {
 }
 
 .block-25 ul li a .meta {
-  color: #b35408;
+  color: #DC3B21;
 }
 
 .block-25 ul li a:hover img {
@@ -1348,7 +1348,7 @@ body:after {
   position: absolute;
   width: 30px;
   height: 30px;
-  background: #b35408;
+  background: #DC3B21;
   border-radius: 50%;
   color: #fff;
 }
@@ -1393,7 +1393,7 @@ body:after {
 }
 .site-block-27 ul li.active a,
 .site-block-27 ul li.active span {
-  background: #b35408;
+  background: #DC3B21;
   color: #fff;
   border: 1px solid transparent;
 }
@@ -1547,7 +1547,7 @@ body:after {
   color: #000;
 }
 .h-entry h2 a:hover {
-  color: #b35408;
+  color: #DC3B21;
 }
 
 .overlap-left {
@@ -1566,7 +1566,7 @@ body:after {
 .feature-1,
 .free-quote,
 .feature-3 {
-  background: #b35408;
+  background: #DC3B21;
   padding: 30px 50px;
   color: rgba(255, 255, 255, 0.6);
   font-size: 15px;
@@ -1655,7 +1655,7 @@ body:after {
   bottom: 0;
   width: 80px;
   height: 3px;
-  background: #b35408;
+  background: #DC3B21;
 }
 .border-primary.text-center:after {
   left: 50%;
@@ -1697,7 +1697,7 @@ body:after {
 .how-it-work-item .number {
   width: 50px;
   height: 50px;
-  background: #b35408;
+  background: #DC3B21;
   color: #fff;
   line-height: 55px;
   font-weight: 300;
@@ -1763,7 +1763,7 @@ body:after {
   line-height: 40px;
   border-radius: 50%;
   display: inline-block;
-  background: #b35408;
+  background: #DC3B21;
   color: #fff;
 }
 
@@ -1837,7 +1837,7 @@ body:after {
   transition: 0.1s all ease;
 }
 .popular-category:hover {
-  background: #b35408;
+  background: #DC3B21;
   -webkit-box-shadow: 0 5px 30px -5px rgba(0, 123, 255, 0.5);
   box-shadow: 0 5px 30px -5px rgba(0, 123, 255, 0.5);
 }
@@ -1899,7 +1899,7 @@ body:after {
   font-size: 12px;
   display: inline-block;
   padding: 5px 30px;
-  background: #b35408;
+  background: #DC3B21;
   border-radius: 30px;
   color: #fff;
   letter-spacing: 0.2em;
@@ -1947,7 +1947,7 @@ body:after {
 }
 
 .accordion-item[aria-expanded="true"] {
-  color: #b35408;
+  color: #DC3B21;
 }
 
 .social-media {
@@ -1991,7 +1991,7 @@ body:after {
   display: inline-block;
   width: 50px;
   height: 50px;
-  background: #b35408;
+  background: #DC3B21;
   margin-right: 1.5rem;
   border-radius: 50%;
   line-height: 50px;
@@ -2122,13 +2122,13 @@ body:after {
 
 .section-sub-title {
   font-size: 13px;
-  color: #b35408;
+  color: #DC3B21;
   letter-spacing: 0.2em;
   text-transform: uppercase;
 }
 
 .section-title {
-  color: #b35408;
+  color: #DC3B21;
   font-size: 40px;
   font-weight: 900;
 }
@@ -2146,7 +2146,7 @@ body:after {
   position: absolute;
   bottom: -10px;
   right: -10px;
-  background: #b35408;
+  background: #DC3B21;
   padding: 20px;
 }
 @media (max-width: 991.98px) {
@@ -2247,7 +2247,7 @@ body:after {
   -webkit-transition: 0.3s all ease;
   -o-transition: 0.3s all ease;
   transition: 0.3s all ease;
-  background: #b35408;
+  background: #DC3B21;
 }
 .team-member .social li {
   list-style: none;
@@ -2289,7 +2289,7 @@ body:after {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   display: inline-block;
-  background: #b35408;
+  background: #DC3B21;
 }
 @media (max-width: 991.98px) {
   .custom-direction {
@@ -2377,13 +2377,13 @@ body:after {
 }
 .filters .btn:hover {
   border-color: transparent;
-  background: #b35408;
+  background: #DC3B21;
   color: #fff;
 }
 .filters .btn.active {
-  background: #b35408 !important;
+  background: #DC3B21 !important;
   color: #fff;
-  border-color: #b35408 !important;
+  border-color: #DC3B21 !important;
 }
 
 .pricing {
@@ -2395,7 +2395,7 @@ body:after {
 }
 .pricing .price > span > span {
   font-size: 3rem;
-  color: #b35408;
+  color: #DC3B21;
 }
 .pricing ul li {
   margin-bottom: 20px;
@@ -2682,7 +2682,7 @@ figure figcaption {
 .arrow {
   width: 50px;
   height: 50px;
-  background-color: #b35408;
+  background-color: #DC3B21;
   position: fixed;
   bottom: 0;
   right: 0;
