--- a/css/style.css
+++ b/css/style.css
@@ -2749,13 +2749,24 @@ figure figcaption {
   margin-bottom: 0 !important;
 }
 
-.site-section {
-  padding-bottom: 5vh !important;
-  padding-top: 5vh !important;
+.filters {
+  padding-bottom: 4vh;
 }
+
+.site-section {
+  padding-top: 100px !important;
+}
+
 .section-title {
-  padding-bottom: 3vh !important;
-  padding-top: 3vh !important;
+  padding-bottom: 5vh !important;
+}
+
+.carousel-item-title {
+  padding-bottom: 1vh !important;
+}
+
+.last-section {
+  padding-bottom: 100px;
 }
 
 @media only screen and (max-width: 992px) {
@@ -2777,12 +2788,7 @@ figure figcaption {
     -moz-box-ordinal-group: 2;
     box-ordinal-group: 2;
   }
-  .site-section {
-    padding-bottom: 3vh !important;
-    padding-top: 3vh !important;
-  }
-  .section-title {
-    padding-bottom: 3vh !important;
-    padding-top: 3vh !important;
+  .carousel-item-title {
+    padding-top: 4vh !important;
   }
 }
