--- a/css/style.css
+++ b/css/style.css
@@ -2775,6 +2775,32 @@ figure figcaption {
 .team {
   margin-top: 30px;
   margin-bottom: 30px;
+  text-align: center;
+}
+
+.team-member {
+  width: 150px;
+  height: 150px;
+  color: white;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 15px;
+  background-size: 250px !important;
+  background-position: center !important;
+  background-repeat: no-repeat !important;
+}
+
+.team-member-content {
+  min-height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  visibility: hidden;
+}
+
+.team-member:hover .team-member-content {
+  cursor: pointer;
+  visibility: visible;
 }
 
 @media only screen and (max-width: 992px) {
