--- a/css/style.css
+++ b/css/style.css
@@ -2773,41 +2773,33 @@ figure figcaption {
 }
 
 .team {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  text-align: center;
+  margin-top: 50px;
 }
 
 .team-member {
-  width: 150px;
-  height: 150px;
-  color: white;
-  border-radius: 50%;
-  display: inline-block;
-  margin: 15px;
-  background-size: 250px !important;
-  background-position: center !important;
-  background-repeat: no-repeat !important;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
-@media only screen and (max-width: 400px) {
-  .team-member {
-    width: 17vh;
-    height: 17vh;
+.member-img-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.member-img {
+  width: 200px;
+}
+
+@media only screen and (min-width: 992px) {
+  .member-info-container {
+    position: relative;
   }
-}
 
-.team-member-content {
-  min-height: 100%;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  visibility: hidden;
-}
-
-.team-member:hover .team-member-content {
-  cursor: pointer;
-  visibility: visible;
+  .member-info {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
 
 @media only screen and (max-width: 992px) {
