--- a/css/style.css
+++ b/css/style.css
@@ -2819,6 +2819,7 @@ figure figcaption {
 
   .horario-img {
     max-width: 70%;
+    margin-top: 50px;
   }
 }
 
@@ -2846,5 +2847,6 @@ figure figcaption {
   }
   .horario-img {
     max-width: 100%;
+    margin-top: 80px;
   }
 }
